video auto load

--- a/w3.css
+++ b/w3.css
@@ -1,4 +1,5 @@
 /* W3.CSS 4.15 December 2020 by Jan Egil and Borge Refsnes */
+/* then i changed some of these  */
 html {
   box-sizing: border-box;
 }
@@ -35,7 +36,11 @@ audio,
 canvas,
 progress,
 video {
-  display: inline-block;
+  /*display: inline-block;*/
+  /* changed by §johann */
+  max-width: 100%;
+  height: auto;
+  
 }
 progress {
   vertical-align: baseline;
